--- a/web/app/package.json
+++ b/web/app/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "axios": "^1.6.7",
+    "file-saver": "^2.0.5",
+    "fs": "^0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3"
