--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "20"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsup src",
+    "start" : "node dist/server.js",
     "seeds": "tsx seeds.ts"
   },
   "keywords": [],
@@ -24,6 +29,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.507.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@prisma/client": "5.8.1",
     "cors": "^2.8.5",
@@ -32,6 +38,7 @@
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
     "multer": "1.4.5-lts.1",
-    "openai": "^4.26.0"
+    "openai": "^4.26.0",
+    "tsup": "^8.0.1"
   }
 }
