--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsup src && mkdir tmp",
-    "start" : "node dist/server.js",
+    "build": "tsup src",
+    "start" : "pm2 start dist/server.js",
     "seeds": "tsx seeds.ts"
   },
   "keywords": [],
