--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsup src",
+    "build": "tsup src && mkdir tmp",
     "start" : "pm2 start dist/server.js",
     "seeds": "tsx seeds.ts"
   },
