--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsup src && mkdir dist/tmp",
-    "start": "node --env-file .env && pm2 start dist/server.js",
+    "build": "tsup src && mkdir dist/tmp && touch .env",
+    "start": "pm2 start dist/server.js",
     "seeds": "tsx seeds.ts"
   },
   "keywords": [],
