--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "tsx watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsup src && mkdir dist/tmp && touch .env",
-    "start": "pm2 start dist/server.js",
+    "start": "sudo pm2 start dist/server.js",
     "seeds": "tsx seeds.ts"
   },
   "keywords": [],
